Description:
Compiling InnoDB's library on Windows there are the below compiler warnings:
ChangeSet@1.2014, 2005-06-25 00:27:40+04:00, konstantin@mysql.com
Free unused JOINs early even if using subqueries.
Compiling...
D:\builds\mysql-5.0.9-beta\innobase\btr\btr0btr.c(147) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\btr\btr0btr.c(2017) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\btr\btr0btr.c(2511) : warning C4018: '!=' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\btr\btr0cur.c(511) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\btr\btr0cur.c(1388) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\fil\fil0fil.c(4037) : warning C4133: 'function' : incompatible types - from 'void ** ' to 'struct fil_node_struct ** '
D:\builds\mysql-5.0.9-beta\innobase\ibuf\ibuf0ibuf.c(2813) : warning C4018: '!=' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\log\log0recv.c(771) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\log\log0recv.c(779) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\log\log0recv.c(799) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\log\log0recv.c(809) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\log\log0recv.c(817) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\log\log0recv.c(825) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\log\log0recv.c(858) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\os\os0file.c(3419) : warning C4133: 'function' : incompatible types - from 'void ** ' to 'struct fil_node_struct ** '
D:\builds\mysql-5.0.9-beta\innobase\page\page0page.c(486) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\page\page0page.c(1350) : warning C4018: '==' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\page\page0page.c(1744) : warning C4018: '!=' : signed/unsigned mismatch
D:\builds\mysql-5.0.9-beta\innobase\row\row0upd.c(821) : warning C4018: '==' : signed/unsigned mismatch
Generating Code...
Creating library...
innodb.lib - 0 error(s), 19 warning(s)
How to repeat:
Compile InnoDB on Windows with VC++ 6.0
Suggested fix:
-