Many files:   Remove compiler warnings on Windows - Bug #11580