innobase/btr/btr0btr.c
@@ -143,7 +143,7 @@ btr_root_get(
 	root_page_no = dict_tree_get_page(tree);
 
 	root = btr_page_get(space, root_page_no, RW_X_LATCH, mtr);
-	ut_a(!!page_is_comp(root) ==
+	ut_a((ibool)!!page_is_comp(root) ==
 			UT_LIST_GET_FIRST(tree->tree_indexes)->table->comp);
 	
 	return(root);
@@ -2014,7 +2014,7 @@ btr_compress(
 	page = btr_cur_get_page(cursor);
 	tree = btr_cur_get_tree(cursor);
 	comp = page_is_comp(page);
-	ut_a(!!comp == cursor->index->table->comp);
+	ut_a((ibool)!!comp == cursor->index->table->comp);
 
 	ut_ad(mtr_memo_contains(mtr, dict_tree_get_lock(tree),
 							MTR_MEMO_X_LOCK));
@@ -2508,7 +2508,7 @@ btr_index_rec_validate(
 	        return(TRUE);
 	}
 
-	if (UNIV_UNLIKELY(!!page_is_comp(page) != index->table->comp)) {
+	if (UNIV_UNLIKELY((ibool)!!page_is_comp(page) != index->table->comp)) {
 		btr_index_rec_validate_report(page, rec, index);
 		fprintf(stderr, "InnoDB: compact flag=%lu, should be %lu\n",
 			(ulong) !!page_is_comp(page),
